--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li> <a href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul></ul>
+        <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
@@ -34,14 +34,22 @@
         </section>
         <section>
             <ul>
-                <li>Внимание к деталям</li>
-                <li>Пунктуальность</li>
-                <li>Планирование</li>
-                <li>Современные технологии</li>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
             </ul>
         </section>
         <section>
@@ -66,24 +74,24 @@
             <ul>
                 <li>
                     <img src="./images/employees/ihor.jpg" alt=" дизайнера" width="270" height="260" />
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
                 </li>
-                <h3>Игорь Демьяненко</h3>
-                <p lang="en">Product Designer</p>
                 <li>
                     <img src="./images/employees/olha.jpg" alt=" фронтенд разработчик" width="270" height="260" />
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
                 </li>
-                <h3>Ольга Репина</h3>
-                <p lang="en">Frontend Developer</p>
                 <li>
                     <img src="./images/employees/nikolay.jpg" alt="маркетолог" width="270" height="260" />
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
                 </li>
-                <h3>Николай Тарасов</h3>
-                <p lang="en">Marketing</p>
                 <li>
                     <img src="./images/employees/michail.jpg" alt="UI дизайнер" width="270" height="260" />
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designer</p>
                 </li>
-                <h3>Михаил Ермаков</h3>
-                <p lang="en">UI Designer</p>
             </ul>
         </section>
         <section></section>
