--- a/index.html
+++ b/index.html
@@ -1,60 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <a href="">
-                <img src="">WebStudio</img>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;900&display=swap"
+        rel="stylesheet"/>
+    <link rel="stylesheet" href="/css/styles.css"/>
 
+</head>
+ <!-- ----- LOGO -----------NAVIGATION--- -->
+<body class="font">
+    <header class="page-header">
+        <nav class="page-nav">
+            <a class="logotyp link" href="">
+                <img class="logo-image " src=""><span class="part-logo">Web</span>Studio</img>
             </a>
-            <ul>
-                <li> <a href="">Студия</a></li>
-                <li> <a href="">Портфолио</a></li>
-                <li> <a href="">Контакты</a></li>
+            <ul class="menu list">
+                <li class="menu item"> <a class="menu-link link" href="">Студия</a></li>
+                <li class="menu item"> <a class="menu-link link" href="">Портфолио</a></li>
+                <li class="menu item"> <a class="menu-link link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="list  ">
+        <li><a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com </a></li>
+        <li><a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-
+   <!--------      HERO ----------->
     </header>
     <main>
-        <section>
+        <section class="hero">
             <div>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button tupe="button">Заказать услугу</button>
+                <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+                <button class="modal-btn" tupe="button">Заказать услугу</button>
             </div>
         </section>
+        <!----------     DESCRIPTION ------ -->
         <section>
-            <ul>
+            <ul class="list">
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="points">Внимание к деталям</h3>
+                    <p class="description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="points">Пунктуальность</h3>
+                    <p class="description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="points">Планирование</h3>
+                    <p class="description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="points">Современные технологии</h3>
+                    <p class="description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
-        <section>
+        <section class=" services">
             <h2>Чем мы занимаемся</h2>
-            <ul>
+            <ul class="list ">
                 <li>
                     <img src="./images/specialization/photo-one.jpg" alt=" програмист работающий в офисе" width="370"
                         height="294" />
@@ -69,41 +76,43 @@
                 </li>
                 </ui>
         </section>
+        <!-- -------TEAM------- -->
         <section>
-            <h2>Наша команда</h2>
-            <ul>
+            <h2 class="team">Наша команда</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/employees/ihor.jpg" alt=" дизайнера" width="270" height="260" />
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <h3 class="name">Игорь Демьяненко</h3>
+                    <p class="job" lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/employees/olha.jpg" alt=" фронтенд разработчик" width="270" height="260" />
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h3 class="name">Ольга Репина</h3>
+                    <p class="job" lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/employees/nikolay.jpg" alt="маркетолог" width="270" height="260" />
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h3 class="name">Николай Тарасов</h3>
+                    <p class="job" lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/employees/michail.jpg" alt="UI дизайнер" width="270" height="260" />
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <h3 class="name">Михаил Ермаков</h3>
+                    <p class="job" lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
-        <section></section>
     </main>
-    <footer>
-        <a href="">WebStudio</a>
+    <!-- ------FOOTER----- -->
+    <footer class="link footer">
+        <a class="logotyp-footer link" href=""><span class="part-logo">Web</span>Studio</a>
         <address>
-            <ul>
-                <li><a href="https://goo.gl/maps/azbWTrfFAkUfDFu67" target="_blank" rel="noopener noreferrer"> г. Киев,
+            <ul class="list ">
+                <li><a class="address link" href="https://goo.gl/maps/azbWTrfFAkUfDFu67" target="_blank" rel="noopener noreferrer"> г. Киев,
                         пр-т Леси Украинки, 26 </a></li>
-                <li><a href="mailto:info@example.com">info@example.com </a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <li><a class="contact
+                     link" href="mailto:info@example.com">info@example.com </a></li>
+                <li><a class="contact link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
