--- a/index portfolio.html
+++ b/index portfolio.html
@@ -17,7 +17,7 @@
                 <img class="logo-image " src=""><span class="part-logo">Web</span>Studio</img>
             </a>
             <ul class="menu list">
-                <li class="menu item"> <a class="menu-link link" href="">Студия</a></li>
+                <li class="menu item"> <a class="menu-link link" href="index.html">Студия</a></li>
                 <li class="menu item"> <a class="menu-link link" href="">Портфолио</a></li>
                 <li class="menu item"> <a class="menu-link link" href="">Контакты</a></li>
             </ul>
