--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
             <ul class="menu list">
                 <li class="menu item"> <a class="menu-link link" href="">Студия</a></li>
-                <li class="menu item"> <a class="menu-link link" href="">Портфолио</a></li>
+                <li class="menu item"> <a class="menu-link link" href="index portfolio.html">Портфолио</a></li>
                 <li class="menu item"> <a class="menu-link link" href="">Контакты</a></li>
             </ul>
         </nav>
