--- a/index portfolio.html
+++ b/index portfolio.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
-<body>
+<body class="font">
     <header>
         <nav class="page-nav">
             <a class="logotyp link" href="">
@@ -29,11 +29,11 @@
            </ul>
         <section >
             <ul class="list ">
-                <li> <batton class="modal-btn-portfolio" tupe="batton">Все</batton></li>
-                <li> <batton class="modal-btn-portfolio" tup="batton">Веб-сайты</batton></li>
-                <li> <batton class="modal-btn-portfolio" tup="batton">Приложения</batton></li>
-                <li> <batton class="modal-btn-portfolio" tup="batton">Дизайн</batton></li>
-                <li> <batton class="modal-btn-portfolio" tup="batton">Маркетинг</batton></li>
+                <li> <batton class="modal-btn-portfolio" type="batton">Все</batton></li>
+                <li> <batton class="modal-btn-portfolio" type="batton">Веб-сайты</batton></li>
+                <li> <batton class="modal-btn-portfolio" type="batton">Приложения</batton></li>
+                <li> <batton class="modal-btn-portfolio" type="batton">Дизайн</batton></li>
+                <li> <batton class="modal-btn-portfolio" type="batton">Маркетинг</batton></li>
             </ul>
            
         </section>
