--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="menu item"> <a class="menu-link link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="list  ">
+        <ul class="list ">
         <li><a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com </a></li>
         <li><a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
@@ -35,7 +35,7 @@
         <section class="hero">
             <div>
                 <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
-                <button class="modal-btn" tupe="button">Заказать услугу</button>
+                <button class="modal-btn" type="button">Заказать услугу</button>
             </div>
         </section>
         <!----------     DESCRIPTION ------ -->
