--- a/index portfolio.html
+++ b/index portfolio.html
@@ -27,18 +27,17 @@
             <li> <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li> <a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
            </ul>
-        <section >
+   </header>
+   
+        <main>
             <ul class="list ">
-                <li> <batton class="modal-btn-portfolio" type="batton">Все</batton></li>
-                <li> <batton class="modal-btn-portfolio" type="batton">Веб-сайты</batton></li>
-                <li> <batton class="modal-btn-portfolio" type="batton">Приложения</batton></li>
-                <li> <batton class="modal-btn-portfolio" type="batton">Дизайн</batton></li>
-                <li> <batton class="modal-btn-portfolio" type="batton">Маркетинг</batton></li>
+                <li> <batton class="modal-btn-portfolio" type="button">Все</batton></li>
+                <li> <batton class="modal-btn-portfolio" type="button">Веб-сайты</batton></li>
+                <li> <batton class="modal-btn-portfolio" type="button">Приложения</batton></li>
+                <li> <batton class="modal-btn-portfolio" type="button">Дизайн</batton></li>
+                <li> <batton class="modal-btn-portfolio" type="button">Маркетинг</batton></li>
             </ul>
            
-        </section>
-
-        <section >
             <ul class="list menu-portfolio">
                 <li> <img src="./images portfolio/photo-one.jpg" alt="сотрудники">
                 <p class="service-name">Технокряк</p>
@@ -78,8 +77,8 @@
             </li>
             
             </ul>
-        </section>
-    </header>
+        </main>
+   
     <footer class="footer">
       <a class="link logotyp-footer" href=""> <span class="part-logo">Web</span>Studio</a>
       <ul class="list">
