--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="hero">
             <div>
                 <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
-                <button class="modal-btn" type="button">Заказать услугу</button>
+                <button class="modal-btn" type="button"> Заказать услугу</button>
             </div>
         </section>
         <!----------     DESCRIPTION ------ -->
@@ -108,11 +108,13 @@
         <a class="logotyp-footer link" href=""><span class="part-logo">Web</span>Studio</a>
         <address>
             <ul class="list ">
-                <li><a class="address link" href="https://goo.gl/maps/azbWTrfFAkUfDFu67" target="_blank" rel="noopener noreferrer"> г. Киев,
-                        пр-т Леси Украинки, 26 </a></li>
-                <li><a class="contact
-                     link" href="mailto:info@example.com">info@example.com </a></li>
-                <li><a class="contact link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <li>
+                 <a class="address link" href="https://goo.gl/maps/azbWTrfFAkUfDFu67" target="_blank" rel="noopener noreferrer"> г. Киев,
+                  пр-т Леси Украинки, 26 </a></li>
+                <li>
+                  <a class="contact-footer link" href="mailto:info@example.com">info@example.com </a></li>
+                <li>
+                 <a class="contact-footer link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
