--- a/index portfolio.html
+++ b/index portfolio.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,67 +11,67 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
-<body class="font">
-    <header>
-        <nav class="page-nav">
+<body>
+    <header class="page-header-container container">
+        <nav class="page-nav page-header-container">
             <a class="logotyp link" href="">
                 <img class="logo-image " src=""><span class="part-logo">Web</span>Studio</img>
             </a>
-            <ul class="menu list">
-                <li class="menu item"> <a class="menu-link link" href="index.html">Студия</a></li>
-                <li class="menu item"> <a class="menu-link link" href="">Портфолио</a></li>
-                <li class="menu item"> <a class="menu-link link" href="">Контакты</a></li>
+            <ul class="menu list page-header-container ">
+                <li class="menu-item"> <a class="menu-link link" href="index.html">Студия</a></li>
+                <li class="menu-item"> <a class="menu-link link" href="">Портфолио</a></li>
+                <li class="menu-item"> <a class="menu-link link" href="">Контакты</a></li>
             </ul>
         </nav>
-           <ul class="list">
+           <ul class="list contact page-header-container">
             <li> <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li> <a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li> <a class=" link" href="tel:+380961111111">+38 096 111 11 11</a></li>
            </ul>
    </header>
    
         <main>
-            <ul class="list ">
-                <li> <batton class="modal-btn-portfolio" type="button">Все</batton></li>
-                <li> <batton class="modal-btn-portfolio" type="button">Веб-сайты</batton></li>
-                <li> <batton class="modal-btn-portfolio" type="button">Приложения</batton></li>
-                <li> <batton class="modal-btn-portfolio" type="button">Дизайн</batton></li>
-                <li> <batton class="modal-btn-portfolio" type="button">Маркетинг</batton></li>
+            <ul class="list buttons-container container">
+                <li class="buttons-location"> <button class="modal-btn-portfolio" type="button">Все</button></li>
+                <li class="buttons-location"> <button class="modal-btn-portfolio" type="button">Веб-сайты</button></li>
+                <li class="buttons-location"> <button class="modal-btn-portfolio" type="button">Приложения</button></li>
+                <li class="buttons-location"> <button class="modal-btn-portfolio" type="button">Дизайн</button></li>
+                <li class="buttons-location"> <button class="modal-btn-portfolio" type="button">Маркетинг</button></li>
             </ul>
            
-            <ul class="list menu-portfolio">
-                <li> <img src="./images portfolio/photo-one.jpg" alt="сотрудники">
+            <ul class="list menu-portfolio container">
+                <li class="list-menu menu-card"> <img src="./images portfolio/photo-one.jpg" alt="сотрудники">
                 <p class="service-name">Технокряк</p>
                 <p class="direction">Веб-сайт</p>
             </li>
-                <li> <img src="./images portfolio/photo-two.jpg" alt="баскетболисты">
+                <li class="list-menu menu-card"> <img src="./images portfolio/photo-two.jpg" alt="баскетболисты">
                 <p class="service-name">Постер New Orlean vs Golden Star</p>
                 <p class="direction">Дизайн</p>
             </li>
-                <li> <img src="./images portfolio/photo-three.jpg" alt="логотип ресторана">
+                <li class="list-menu menu-card"> <img src="./images portfolio/photo-three.jpg" alt="логотип ресторана">
                 <p class="service-name">Ресторан Seafood</p>
                 <p class="direction">Приложение</p>
             </li>
-                <li> <img src="./images portfolio/photo-four.jpg" alt="наушники">
+                <li class="list-menu menu-card"> <img src="./images portfolio/photo-four.jpg" alt="наушники">
                 <p class="service-name">Проект Prime</p>
                 <p class="direction">Маркетинг</p>
             </li>
-                <li> <img src="./images portfolio/photo-five.jpg" alt="коробки">
+                <li class="list-menu menu-card"> <img src="./images portfolio/photo-five.jpg" alt="коробки">
                 <p class="service-name">Проект Boxes</p>
                 <p class="direction">Приложение</p>
             </li>
-                <li> <img src="./images portfolio/photo-six.jpg" alt="монитор">
+                <li class="list-menu menu-card"> <img src="./images portfolio/photo-six.jpg" alt="монитор">
                 <p class="service-name" lang="en">Inspiration has no Borders</p>
                 <p class="direction">Веб-сайт</p>
             </li>
-                <li> <img src="./images portfolio/photo-seven.jpg" alt="журнал">
+                <li class="list-menu menu-card"> <img src="./images portfolio/photo-seven.jpg" alt="журнал">
                 <p class="service-name">Издание Limited Edition</p>
                 <p class="direction">Дизайн</p>
             </li>
-                <li> <img src="./images portfolio/photo-eight.jpg" alt="бирка">
+                <li class="list-menu menu-card"> <img src="./images portfolio/photo-eight.jpg" alt="бирка">
                 <p class="service-name">Проект LAB</p>
                 <p class="direction">Маркетинг</p>
             </li>
-                <li> <img src="./images portfolio/photo-nine.jpg" alt="ноутбук">
+                <li class="list-menu menu-card"> <img src="./images portfolio/photo-nine.jpg" alt="ноутбук">
                 <p class="service-name" lang="en">Growing Business</p>
                 <p class="direction">Приложение</p>
             </li>
@@ -80,6 +80,7 @@
         </main>
    
     <footer class="footer">
+        <div class="container">
       <a class="link logotyp-footer" href=""> <span class="part-logo">Web</span>Studio</a>
       <ul class="list">
        <li><a class="address link" href="https://goo.gl/maps/azbWTrfFAkUfDFu67" target="_blank" rel="noopener noreferrer"> г. Киев,
@@ -91,7 +92,7 @@
        <a class="contact link" href="tel:+380991111111">+38 099 111 11 11</a>
         </li>
       </ul>
-      
+      </div>
     </footer>
 </body>
 </html>
