--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </div>
         </section>
         <!----------     DESCRIPTION ------ -->
-        <section class=" container">
-            <ul class="details  list ">
+        <section class=" details  container">
+            <ul class="location-details list ">
                 <li>
                     <h3>Внимание к деталям</h3>
                     <p class="description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -60,7 +60,8 @@
                 </li>
             </ul>
         </section>
-        <section class=" services container">
+        <section class=" services ">
+           <div class="container">
             <h2>Чем мы занимаемся</h2>
             <ul class="list images images-indent">
                 <li class="images-indent" >
@@ -76,32 +77,40 @@
                         width="370" height="294" />
                 </li>
                 </ui>
-                
+            </div>
         </section>
         <!-- -------TEAM------- -->
-        <section class="team-background">
-            <div class="container our-team">
+        <section class="team-background our-team">
+            <div class="container" >
             <h2 > Наша команда </h2>
             <ul class="list team">
                 <li class="card" >
                     <img  src="./images/employees/ihor.jpg" alt=" дизайнера" width="270" height="260" />
+                    <div class="location-card">
                     <h3 class="name">Игорь Демьяненко</h3>
                     <p class="job" lang="en">Product Designer</p>
+                    </div>
                 </li>
                 <li  class="card" >
                     <img  src="./images/employees/olha.jpg" alt=" фронтенд разработчик" width="270" height="260" />
+                    <div class="location-card">
                     <h3 class="name">Ольга Репина</h3>
                     <p class="job" lang="en">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="card" >
                     <img  src="./images/employees/nikolay.jpg" alt="маркетолог" width="270" height="260" />
+                    <div class="location-card">
                     <h3 class="name">Николай Тарасов</h3>
                     <p class="job" lang="en">Marketing</p>
+                    </div>
                 </li>
                 <li class="card" >
                     <img src="./images/employees/michail.jpg" alt="UI дизайнер" width="270" height="260" />
+                    <div class="location-card">
                     <h3 class="name">Михаил Ермаков</h3>
                     <p class="job" lang="en">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
