--- a/index portfolio.html
+++ b/index portfolio.html
@@ -43,37 +43,37 @@
             </ul>
            
             <ul class="list  menu-portfolio container">
-                <li class=" list-menu  menu-card"> <img src="./images portfolio/photo-one.jpg" alt="сотрудники">
+                <li class=" list-menu indent menu-card"> <img src="./images portfolio/photo-one.jpg" alt="сотрудники">
                 <div class="name-card">
                 <p class="service-name">Технокряк</p>
                 <p class="direction">Веб-сайт</p>
                 </div>
             </li>
-                <li class="list-menu menu-card"> <img src="./images portfolio/photo-two.jpg" alt="баскетболисты">
+                <li class="list-menu indent menu-card"> <img src="./images portfolio/photo-two.jpg" alt="баскетболисты">
                 <div class="name-card">
                 <p class="service-name">Постер New Orlean vs Golden Star</p>
                 <p class="direction">Дизайн</p>
                 </div>
             </li>
-                <li class="list-menu menu-card"> <img src="./images portfolio/photo-three.jpg" alt="логотип ресторана">
+                <li class="list-menu indent menu-card"> <img src="./images portfolio/photo-three.jpg" alt="логотип ресторана">
                 <div class="name-card">
                 <p class="service-name">Ресторан Seafood</p>
                 <p class="direction">Приложение</p>
                 </div>
             </li>
-                <li class="list-menu menu-card"> <img src="./images portfolio/photo-four.jpg" alt="наушники">
+                <li class="list-menu indent menu-card"> <img src="./images portfolio/photo-four.jpg" alt="наушники">
                 <div class="name-card">
                 <p class="service-name">Проект Prime</p>
                 <p class="direction">Маркетинг</p>
                 </div>
             </li>
-                <li class="list-menu menu-card"> <img src="./images portfolio/photo-five.jpg" alt="коробки">
+                <li class="list-menu indent  menu-card"> <img src="./images portfolio/photo-five.jpg" alt="коробки">
                 <div class="name-card">
                 <p class="service-name">Проект Boxes</p>
                 <p class="direction">Приложение</p>
                 </div>
             </li>
-                <li class="list-menu menu-card"> <img src="./images portfolio/photo-six.jpg" alt="монитор">
+                <li class="list-menu indent menu-card"> <img src="./images portfolio/photo-six.jpg" alt="монитор">
                 <div class="name-card">
                 <p class="service-name" lang="en">Inspiration has no Borders</p>
                 <p class="direction">Веб-сайт</p>
