--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         <section class=" details  container">
             <ul class="location-details list ">
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h3 class="uppercase">Внимание к деталям</h3>
                     <p class="description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
+                    <h3 class="uppercase">Пунктуальность</h3>
                     <p class="description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
+                    <h3 class="uppercase">Планирование</h3>
                     <p class="description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
+                    <h3 class="uppercase">Современные технологии</h3>
                     <p class="description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -87,28 +87,28 @@
                 <li class="card" >
                     <img  src="./images/employees/ihor.jpg" alt=" дизайнера" width="270" height="260" />
                     <div class="location-card">
-                    <h3 class="name">Игорь Демьяненко</h3>
+                    <h3 class="name ">Игорь Демьяненко</h3>
                     <p class="job" lang="en">Product Designer</p>
                     </div>
                 </li>
                 <li  class="card" >
                     <img  src="./images/employees/olha.jpg" alt=" фронтенд разработчик" width="270" height="260" />
                     <div class="location-card">
-                    <h3 class="name">Ольга Репина</h3>
+                    <h3 class="name ">Ольга Репина</h3>
                     <p class="job" lang="en">Frontend Developer</p>
                     </div>
                 </li>
                 <li class="card" >
                     <img  src="./images/employees/nikolay.jpg" alt="маркетолог" width="270" height="260" />
                     <div class="location-card">
-                    <h3 class="name">Николай Тарасов</h3>
+                    <h3 class="name ">Николай Тарасов</h3>
                     <p class="job" lang="en">Marketing</p>
                     </div>
                 </li>
                 <li class="card" >
                     <img src="./images/employees/michail.jpg" alt="UI дизайнер" width="270" height="260" />
                     <div class="location-card">
-                    <h3 class="name">Михаил Ермаков</h3>
+                    <h3 class="name ">Михаил Ермаков</h3>
                     <p class="job" lang="en">UI Designer</p>
                     </div>
                 </li>
