--- a/index portfolio.html
+++ b/index portfolio.html
@@ -26,7 +26,13 @@
             </ul>
         </nav>
            <ul class="list contact page-header-container">
+            <svg width="16" ; height="12">
+                <use href="./images svg/sprite.svg#icon-envelope"></use>
+            </svg>
             <li> <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <svg width="16" ; height="12">
+                <use href="./images svg/sprite.svg#icon-smartphone"></use>
+            </svg>
             <li> <a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
            </ul>
         </div>
@@ -103,7 +109,8 @@
         </main>
    
     <footer class="link footer">
-        <div class="container ">
+        <div class="container location-footer">
+            <div>
             <a class="logotyp-footer link" href=""><span class="part-logo">Web</span>Studio</a>
             <address>
                 <ul class="list ">
@@ -120,6 +127,34 @@
                     </li>
                 </ul>
             </address>
+            </div>
+        <div class="footer-icon  link location-footer-media">
+            <p class="media">присоединяйтесь</p>
+            <ul class="icon-list-footer  list">
+                <li class="media-footer ">
+                    <a class="media-footer" href="">
+                        <svg width="20" ; height="20">
+                            <use href="./images svg/sprite.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class=" media-footer">
+                    <svg width="20" ; height="20">
+                        <use href="./images svg/sprite.svg#icon-twitter"></use>
+                    </svg>
+                </li>
+                <li class=" media-footer">
+                    <svg width="20" ; height="20">
+                        <use href="./images svg/sprite.svg#icon-facebook"></use>
+                    </svg>
+                </li>
+                <li class=" media-footer">
+                    <svg width="20" ; height="20">
+                        <use href="./images svg/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                </li>
+            </ul>
+           </div>
         </div>
     </footer>
 </body>
