--- a/index.html
+++ b/index.html
@@ -15,30 +15,38 @@
 </head>
  <!-- ----- LOGO -----------NAVIGATION--- -->
 <body>
-    <header class="page-header-container container ">
-        <nav class="page-nav page-header-container">
-            <a class="logotyp link" href="">
-                <img class="logo-image " src=""><span class="part-logo">Web</span>Studio</img>
+    <header class=" portfolio-line" >
+        <div class="container page-header-container">
+        <nav class="page-nav">
+            <a class="logotyp link" href="./index.html">Web<sp class="part-logo">Studio</sp>
             </a>
-            <ul class="menu list page-header-container ">
-                <li class=" menu-item"> <a class="menu-link link" href="">Студия</a></li>
-                <li class=" menu-item"> <a class="menu-link link" href="index portfolio.html">Портфолио</a></li>
-                <li class=" menu-item"> <a class="menu-link link" href="">Контакты</a></li>
+            <ul class="menu list ">
+                <li class=" menu-item"> 
+                    <a class="menu-link link" href="./index.html">Студия</a></li>
+                <li class=" menu-item">
+                     <a class="menu-link link" href="index portfolio.html">Портфолио</a></li>
+                <li class=" menu-item"> 
+                    <a class="menu-link link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="list contact page-header-container">
-        <svg width="16" ; height="12">
-            <use href="./images svg/sprite.svg#icon-envelope"></use>
-        </svg>
-            <li class="menu-contact"><a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com </a></li>
-        <svg width="16"; height="12">
-            <use href="./images svg/sprite.svg#icon-smartphone"></use>
-        </svg>
-        <li class="menu-contact"><a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        
-    </ul>
-   <!--------      HERO ----------->
+        <ul class="menu list ">
+            <li class="menu-item">
+           <a class="menu-link contact link" href="mailto:info@devstudio.com">
+            <svg  class="menu-link-icon" width="16"  height="12">
+                <use href="./images svg/sprite.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com </a>
+        </li>
+
+        <li>
+        <a class="menu-link contact link" href="tel:+380961111111"><svg class="menu-link-icon" width="10" height="16">
+            <use href="./images svg/sprite.svg#icon-smartphone"></use> </svg> +38 096 111 11 11</a>
+    </li> 
+     </ul>
+    </div>
     </header>
+
+    <!--------      HERO ----------->
     <main>
         <section class="hero">
             <div>
@@ -47,38 +55,41 @@
             </div>
         </section>
         <!----------     DESCRIPTION ------ -->
-        <section class=" details  container">
+        <section class=" container">
             <ul class="location-details list ">
-                <li>
-                    <div class="rectangle">
-                    <svg class="rectangle-icon" width="65" ; height="70">
+                <li class="location-rectangle ">
+                   <div class="rectangle">
+                    <svg class="" width="65"  height="70">
                         <use href="./images svg/sprite.svg#icon-antenna"></use>
                     </svg>
-                    </div>
-                    <h3 class="uppercase">Внимание к деталям</h3>
+                   </div>
+                    <h3 class="uppercase ">Внимание к деталям</h3>
                     <p class="description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
+
+                <li class="location-rectangle">
                     <div class="rectangle">
-                        <svg class="rectangle-icon" width="65" ; height="70">
+                        <svg class="" width="65"  height="70">
                             <use href="./images svg/sprite.svg#icon-clock"></use>
                         </svg>
                     </div>
                     <h3 class="uppercase">Пунктуальность</h3>
                     <p class="description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
+
+                <li class="location-rectangle">
                     <div class="rectangle">
-                        <svg class="rectangle-icon" width="65" ; height="70">
+                        <svg class="" width="65"  height="70">
                             <use href="./images svg/sprite.svg#icon-diagram"></use>
                         </svg>
                     </div>
                     <h3 class="uppercase">Планирование</h3>
                     <p class="description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
+
+                <li class="location-rectangle">
                     <div class="rectangle">
-                        <svg class="rectangle-icon" width="65" ; height="70">
+                        <svg class="" width="65"  height="70">
                             <use href="./images svg/sprite.svg#icon-astronaut"></use>
                         </svg>
                     </div>
@@ -87,6 +98,7 @@
                 </li>
             </ul>
         </section>
+
         <section class=" services ">
            <div class="container">
             <h2>Чем мы занимаемся</h2>
@@ -119,28 +131,28 @@
                     <ul class="socail-list list">
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20" >
+                                <svg class="socail-list-icon" width="20"  height="20" >
                                     <use href="./images svg/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20" >
+                                <svg class="socail-list-icon" width="20"  height="20" >
                                     <use href="./images svg/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20" >
+                                <svg class="socail-list-icon" width="20"  height="20" >
                                     <use href="./images svg/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20" >
+                                <svg class="socail-list-icon" width="20"  height="20" >
                                     <use href="./images svg/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -157,28 +169,28 @@
                     <ul class="socail-list list">
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20">
+                                <svg class="socail-list-icon" width="20" height="20">
                                     <use href="./images svg/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20">
+                                <svg class="socail-list-icon" width="20"  height="20">
                                     <use href="./images svg/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20">
+                                <svg class="socail-list-icon" width="20"  height="20">
                                     <use href="./images svg/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20">
+                                <svg class="socail-list-icon" width="20"  height="20">
                                     <use href="./images svg/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -195,28 +207,28 @@
                     <ul class="socail-list list">
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20">
+                                <svg class="socail-list-icon" width="20"  height="20">
                                     <use href="./images svg/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20">
+                                <svg class="socail-list-icon" width="20"  height="20">
                                     <use href="./images svg/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20">
+                                <svg class="socail-list-icon" width="20"  height="20">
                                     <use href="./images svg/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20">
+                                <svg class="socail-list-icon" width="20"  height="20">
                                     <use href="./images svg/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -233,28 +245,28 @@
                     <ul class="socail-list list">
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20">
+                                <svg class="socail-list-icon" width="20"  height="20">
                                     <use href="./images svg/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20">
+                                <svg class="socail-list-icon" width="20"  height="20">
                                     <use href="./images svg/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20">
+                                <svg class="socail-list-icon" width="20"  height="20">
                                     <use href="./images svg/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socail-list-item">
                             <a href="" class="socail-list-link">
-                                <svg class="socail-list-icon" width="20" ; height="20">
+                                <svg class="socail-list-icon" width="20"  height="20">
                                     <use href="./images svg/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -266,38 +278,50 @@
             </ul>
             </div>
             </section>
-            <div class=" container background-clients ">
+            <div class=" container background-clients  ">
                 <p class="clients">Постоянные клиенты</p>
-                <ul class="clients-icon-location  ">
-                    <li class="clients-icon menu-client">
-                        <svg class="clients-icon-color" width="106" ; height="60">
+                <ul class="clients-icon-location list ">
+                    <li class="  menu-client">
+                        <a class="clients-icon " href="">
+                        <svg  width="106"  height="60">
                             <use href="./images svg/sprite.svg#icon-Logo-one"> </use>
                         </svg>
+                        </a>
                     </li>
-                    <li class="clients-icon menu-client">
-                        <svg width="106" ; height="60">
+                    <li class="menu-client">
+                        <a class="clients-icon" href="">
+                        <svg width="106"  height="60">
                             <use href="./images svg/sprite.svg#icon-Logo-wo"> </use>
                         </svg>
+                        </a>
                     </li>
-                    <li class="clients-icon menu-client">
-                        <svg width="106" ; height="60">
+                    <li class="menu-client ">
+                        <a class="clients-icon" href="">
+                        <svg width="106"  height="60">
                             <use href="./images svg/sprite.svg#icon-Logo-three"> </use>
                         </svg>
+                        </a>
                     </li>
-                    <li class="clients-icon menu-client">
-                        <svg width="106" ; height="60">
+                    <li class="menu-client ">
+                        <a class="clients-icon" href="">
+                        <svg width="106"  height="60">
                             <use href="./images svg/sprite.svg#icon-Logo-four"> </use>
                         </svg>
+                        </a>
                     </li>
-                    <li class="clients-icon menu-client">
-                        <svg width="106" ; height="60">
+                    <li class="menu-client ">
+                        <a class="clients-icon" href="">
+                        <svg width="106"  height="60">
                             <use href="./images svg/sprite.svg#icon-Logo-five"> </use>
                         </svg>
+                        </a>
                     </li>
-                    <li class="clients-icon menu-client">
-                        <svg width="106" ; height="60">
+                    <li class="menu-client ">
+                        <a class="clients-icon" href="">
+                        <svg width="106"  height="60">
                             <use href="./images svg/sprite.svg#icon-Logo-six"> </use>
                         </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -326,25 +350,31 @@
             <ul class="icon-list-footer  list">
                 <li class="media-footer ">
                     <a class="media-footer" href="">
-                                <svg width="20" ; height="20" >
+                                <svg width="20"  height="20" >
                                     <use href="./images svg/sprite.svg#icon-instagram"></use>
                                 </svg>
                                 </a>
                             </li>
                 <li class=" media-footer">
-                                <svg  width="20" ; height="20" >
+                    <a class="media-footer" href="">
+                                <svg  width="20"  height="20" >
                                     <use href="./images svg/sprite.svg#icon-twitter"></use>
                                 </svg>
+                                </a>
                             </li>
-                <li class=" media-footer">                         
-                                <svg  width="20" ; height="20" >
+                <li class=" media-footer">   
+                    <a class="media-footer" href="">
+                                <svg  width="20"  height="20" >
                                     <use href="./images svg/sprite.svg#icon-facebook"></use>
                                 </svg>
+                                </a>
                             </li>
-                <li class=" media-footer">                   
-                        <svg width="20" ; height="20">
+                <li class=" media-footer">  
+                    <a class="media-footer" href="">
+                        <svg width="20"  height="20">
                             <use href="./images svg/sprite.svg#icon-linkedin"></use>
-                        </svg>                   
+                        </svg>   
+                        </a>
                 </li>              
             </ul>
             </div>
