--- a/index portfolio.html
+++ b/index portfolio.html
@@ -13,31 +13,43 @@
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-    <div class="frame">
-    <header class=" page-header-container container">
-        <nav class="page-nav page-header-container">
-            <a class="logotyp link" href="">
-                <img class="logo-image " src=""><span class="part-logo">Web</span>Studio</img>
+    
+<header class=" portfolio-line ">
+    <div class="container page-header-container">
+        <nav class="page-nav ">
+            <a class="logotyp link" href="./index.html">Web<sp class="part-logo">Studio</sp>
             </a>
-            <ul class="menu list page-header-container">
-                <li class="menu-item"> <a class="menu-link link" href="index.html">Студия</a></li>
-                <li class="menu-item"> <a class="menu-link link" href="">Портфолио</a></li>
-                <li class="menu-item"> <a class="menu-link link" href="">Контакты</a></li>
+            <ul class="menu list ">
+                <li class=" menu-item">
+                    <a class="menu-link link" href="./index.html">Студия</a>
+                </li>
+                <li class=" menu-item">
+                    <a class="menu-link link" href="index portfolio.html">Портфолио</a>
+                </li>
+                <li class=" menu-item">
+                    <a class="menu-link link" href="">Контакты</a>
+                </li>
             </ul>
         </nav>
-           <ul class="list contact page-header-container">
-            <svg width="16" ; height="12">
-                <use href="./images svg/sprite.svg#icon-envelope"></use>
-            </svg>
-            <li> <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <svg width="16" ; height="12">
-                <use href="./images svg/sprite.svg#icon-smartphone"></use>
-            </svg>
-            <li> <a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-           </ul>
-        </div>
-   </header>
-   
+        <ul class="menu list ">
+            <li class="menu-item">
+                <a class="menu-link contact link" href="mailto:info@devstudio.com">
+                    <svg class="menu-link-icon" width="16" height="12">
+                        <use href="./images svg/sprite.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com </a>
+            </li>
+
+            <li>
+                <a class="menu-link contact link" href="tel:+380961111111"><svg class="menu-link-icon" width="10"
+                        height="16">
+                        <use href="./images svg/sprite.svg#icon-smartphone"></use>
+                    </svg> +38 096 111 11 11</a>
+            </li>
+        </ul>
+    </div>
+</header>
+
         <main>
             <section class="content">
             <ul class="list buttons-container container">
@@ -133,28 +145,34 @@
             <ul class="icon-list-footer  list">
                 <li class="media-footer ">
                     <a class="media-footer" href="">
-                        <svg width="20" ; height="20">
+                        <svg width="20" height="20">
                             <use href="./images svg/sprite.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class=" media-footer">
-                    <svg width="20" ; height="20">
-                        <use href="./images svg/sprite.svg#icon-twitter"></use>
-                    </svg>
+                    <a class="media-footer" href="">
+                        <svg width="20" height="20">
+                            <use href="./images svg/sprite.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
                 </li>
                 <li class=" media-footer">
-                    <svg width="20" ; height="20">
-                        <use href="./images svg/sprite.svg#icon-facebook"></use>
-                    </svg>
+                    <a class="media-footer" href="">
+                        <svg width="20" height="20">
+                            <use href="./images svg/sprite.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
                 </li>
                 <li class=" media-footer">
-                    <svg width="20" ; height="20">
-                        <use href="./images svg/sprite.svg#icon-linkedin"></use>
-                    </svg>
+                    <a class="media-footer" href="">
+                        <svg width="20" height="20">
+                            <use href="./images svg/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
                 </li>
             </ul>
-           </div>
+        </div>
         </div>
     </footer>
 </body>
